[project]
name = "social-media-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "crawl4ai>=0.6.3",
    "fastapi>=0.115.12",
    "fastmcp>=2.11.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langgraph>=0.4.7",
    "pydantic>=2.11.5",
    "tweepy>=4.15.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
